[package]
name = "side_effects"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = "0.18"
bevy_asset_loader = { version = "0.16" }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1