[package]
name = "no_rats_were_harmed"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = "0.18"
bevy_asset_loader = { version = "0.16" }
pathfinding = "4.2.1"
bevy_rapier3d = "0.21.0"
rand = "0.8.5"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 's'
lto = "thin"